added extra survival points for team wins